# yan_zhuk_test_task

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: utils.cpp  utils.hpp
